add ignore missing dependencies option and jre path delete before generation